Removed more spacing between top nav items to prevent word wrapping in sa fari.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -340,7 +340,7 @@ progress::-moz-progress-bar { background: #E61652; }
 	cursor: pointer;
     float: left;
     text-align: center;
-	margin-left: 29px;
+	margin-left: 27px;
 }
 .dropdownLinkContainer div a{
 	color: #909090;
